--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 
     <!-- main container  -->
     <div class="container">
-        <!-- <div class="message left">hey hello</div>
-        <div class="message left">hey hello</div> -->
+        <!-- <div class="message left"><span>nipun:</span> hello</div>
+        <p class="center"><span>nipun</span>dghtnbgtn</p>
+        <div class="message right"><span>You:</span> hey hello</div> -->
         <!-- form  -->
         <form class="send-container">
             <input type="text" placeholder="Enter text" name="messageInp" id="messageInp" />
