added modal and animations

--- a/index.html
+++ b/index.html
@@ -23,10 +23,19 @@
         <!-- <div class="message left"><span>nipun:</span> hello</div>
         <p class="center"><span>nipun</span>dghtnbgtn</p>
         <div class="message right"><span>You:</span> hey hello</div> -->
+
         <!-- form  -->
         <form class="send-container">
-            <input type="text" placeholder="Enter text" name="messageInp" id="messageInp" />
+            <input type="text" placeholder="Enter text" name="messageInp" id="messageInp" autocomplete="off" />
             <button type="submit" class="btn">Send</button>
+        </form>
+    </div>
+
+    <div class="modal">
+        <form class="enterChatForm">
+            <h1 id="title">welcome To i-chat App</h1>
+            <input id="nameInp" name="name" type="text" placeholder="Enter Name" autocomplete="off" required/>
+            <button type="submit">click to enter Chat Room</button>
         </form>
     </div>
 
