added display users

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <span>i-chat App</span>
         <img id="logo" src="images/chat.png" alt="logo" />
     </nav>
-
+    <p id="users"></p>
     <!-- main container  -->
     <div class="container">
         <!-- <div class="message left"><span>nipun:</span> hello</div>
@@ -33,6 +33,7 @@
 
     <div class="modal">
         <form class="enterChatForm">
+            <img width="50px" src="images/chat.png" alt="logo" />
             <h1 id="title">welcome To i-chat App</h1>
             <input id="nameInp" name="name" type="text" placeholder="Enter Name" autocomplete="off" required/>
             <button type="submit">click to enter Chat Room</button>
