--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
     <p id="users"></p>
     <!-- main container  -->
     <div class="container">
-        <!-- <div class="message left"><span>nipun:</span> hello</div>
+        <div class="message left"><span>nipun:</span> hello</div>
         <p class="center"><span>nipun</span>dghtnbgtn</p>
-        <div class="message right"><span>You:</span> hey hello</div> -->
+        <p class="center"><span>nipun</span>dghtnbgtn</p>
+        <div class="message right"><span>You:</span> hey hello</div>
 
         <!-- form  -->
         <form class="send-container">
